Simplify selection setting. Make TextInput more like TextEdit.

By making selectionStart/End read-only, and adding adding select().

Task-number: QTBUG-11056